--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>CVIc - Coastal Vulnerability Index Compiler</title>
     <meta name="description" content="A tool for assessing shoreline vulnerability to coastal hazards" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+
+    <!-- Load our fix script before any other scripts -->
+    <script src="./json-parse-fix.js" defer></script>
+    <script src="./proj4-fix.js" defer></script>
   </head>
   <body>
     <div id="root"></div>
